<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ffdddddd" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip"
            android:textStyle="italic"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:layout_alignParentLeft="true" />
        <TextView android:textSize="12.0dip"
            android:textStyle="italic"
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/remaining_budget"
            android:layout_alignParentRight="true" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip"
            android:textStyle="italic"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_subcategory"
            android:layout_alignParentLeft="true" />
        <TextView
            android:textSize="12.0dip"
            android:textStyle="italic"
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/spent_budget"
            android:layout_alignParentRight="true" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView android:textSize="12.0dip"
            android:textStyle="italic"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget_header_cat_pm_tag"
            android:layout_alignParentLeft="true" />
    </LinearLayout>
</LinearLayout>